[package]
name = "wmfocus"
description = "Visually focus windows by label"
version = "1.5.0"
repository = "https://github.com/svenstaro/wmfocus"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["wm", "window", "manager", "i3"]
categories = ["command-line-utilities", "command-line-interface"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[features]
i3 = ["i3ipc"]
hyprland = ["dep:hyprland", "wayland"]
wayland = ["wayland-client", "wayland-protocols", "wayland-protocols-wlr", "memmap2", "nix", "tempfile", "xkbcommon"]

[dependencies]
cairo-rs = { version = "0.20", features = ["xcb"] }
css-color-parser = "0.1"
font-loader = "0.11"
i3ipc = { version = "0.10", optional = true }
hyprland = { version = "0.4.0-beta.3", optional = true }
itertools = "0.13"
log = "0.4"
pretty_env_logger = "0.5"
regex = "1.10"
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "deprecated"] }
anyhow = "1"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
xkeysym = "0.2.0"

# Wayland dependencies
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", features = ["client"], optional = true }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }
memmap2 = { version = "0.9", optional = true }
nix = { version = "0.29", features = ["fs", "mman"], optional = true }
tempfile = { version = "3", optional = true }
xkbcommon = { version = "0.7", optional = true }
